[package]
name = "river-ring-buffer"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "A simple ring buffer implementation"
repository = "https://github."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
