[package]
name = "river-ring-buffer"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
description = "A simple ring buffer implementation"
repository = "https://github.com/RiverPhillips/river-ring-buffer"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
